# tree-sitter-algorithmic_notation_itb

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  grammar.js  package-lock.json  package.json  sample.algn  tree-sitter.json
bindings/c/: tree-sitter-algorithmic-notation-itb.pc.in
bindings/c/tree_sitter/: tree-sitter-algorithmic-notation-itb.h
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
