[package]
name = "tree-sitter-algorithmic-notation-itb"
description = "This is an implementation of the algorithmic notation grammar taught in ITB's Algorithms and Programming class."
version = "0.1.0"
authors = ["EnnEffDee"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "algorithmic-notation-itb"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-algorithmic_notation_itb"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
